# Jin-s-investing-prediction

./: .gitattributes  .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml
calibration/: benchmark_ledger.csv  ledger.csv  research_status_overrides.csv
data/: README.md
docs/: ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  KNOWN_LIMITS.md  MODEL_REGISTRY.md  NETWORK_RECOVERY.md  P1_OPERATIONS.md  P2_DECISION_FRAME.md  REGRESSION_AUDIT_PROMPT.md  SELF_AUDIT_PROMPT.md
dualdb/: CHANGELOG.md  config.yaml  pyproject.toml  schema.sql
dualdb/data/seeds/: capex_buildout.csv  dotcom_casualty.csv  entities.csv  events.csv  ritter_curated.csv  roles.csv
dualdb/dualdb/: __init__.py  __main__.py  config.py  db.py  net.py
dualdb/dualdb/analysis/: __init__.py  twins.py  weekly.py
dualdb/dualdb/derive/: __init__.py  coverage.py  daily.py
dualdb/dualdb/export/: __init__.py  base_rates_auto.py  context_bridge.py
dualdb/dualdb/ingest/: __init__.py  all.py  finra.py  fred.py  french.py  ritter.py  seeds.py  shiller.py  stooq.py  yahoo.py
dualdb/dualdb/models/: __init__.py  dtw_daily.py  knn_analog.py  lppl_walkforward.py
dualdb/reports/: models_260719.md  weekly_260715.md  weekly_260719.md  weekly_260720.md
dualdb/tests/: test_dtw_daily.py  test_french.py  test_knn_analog.py  test_lppl_walkforward.py  test_p2_gates.py  test_sentinels.py  test_twins.py
forecasts/: .hashes  TEMPLATE.md
prompts/: reasoning_core_v1.md
questions/: FACTORY_GUIDE.md  HARVEST_CALENDAR.md  TEMPLATE.md  registry.yaml
reports/: calibration.html
src/: README.md
(+136 files in other folders)
